--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.manhani.flutter_todolist_provider">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="flutter_todolist_provider"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"        
+        android:usesCleartextTraffic="true"        >
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
