--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   path: ^1.8.0
   google_fonts: ^2.1.0
   flutter_signin_button: ^2.0.0
-
+  firebase_auth: ^3.1.2
+  firebase_core: ^1.7.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
