--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_signin_button: ^2.0.0
   firebase_auth: ^3.1.2
   firebase_core: ^1.7.0
+  validatorless: ^1.2.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
