--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^1.7.0
   validatorless: ^1.2.1
   flutter_overlay_loader: ^1.0.3
+  google_sign_in: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
