--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   validatorless: ^1.2.1
   flutter_overlay_loader: ^1.0.3
   google_sign_in: ^5.1.1
+  date_picker_timeline: ^1.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
