--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   sqflite: ^2.0.0+4
   provider: ^6.0.1
   path: ^1.8.0
@@ -40,6 +42,7 @@ dependencies:
   flutter_overlay_loader: ^1.0.3
   google_sign_in: ^5.1.1
   date_picker_timeline: ^1.2.3
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
